full movies app

--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
       src="https://kit.fontawesome.com/68129f478c.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./app.js"></script>
+    <script src="./App.js"></script>
   </body>
 </html>
